--- a/haskell/biotool-hs.cabal
+++ b/haskell/biotool-hs.cabal
@@ -1,26 +1,20 @@
 name:                biotool-hs
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Demonstration bioinformatics tool 
 description:         Please see README.md
-homepage:            https://github.com/githubuser/biotool-hs#readme
+homepage:            https://github.com/bjpop/biotool-hs#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
+author:              Bernie Pope 
+maintainer:          bjpope@unimelb.edu.au
+copyright:           2016 Bernie Pope 
 category:            Web
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
-
 executable biotool-hs-exe
-  hs-source-dirs:      app
+  hs-source-dirs:      src 
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
@@ -40,4 +34,4 @@ test-suite biotool-hs-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/biotool-hs
+  location: https://github.com/bjpop/biotool-hs
