--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 
-# Use new container infrastructure to enable caching
-sudo: false
+sudo: true
 
-# Choose a lightweight base image; we provide our own build tools.
+# Choose a lightweight base image
 language: c
 
 addons:
