--- a/haskell/biotool-hs.cabal
+++ b/haskell/biotool-hs.cabal
@@ -24,9 +24,11 @@ executable biotool-hs-exe
 
 test-suite biotool-hs-test
   type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
+  hs-source-dirs:      test 
+  main-is:             Test.hs
   build-depends:       base
+                     , biofasta
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
