Use boost program_options for parsing command line arguments in C++ version

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -14,6 +14,9 @@ find_package (ZLIB)
 # Load the SeqAn module and fail if not found.
 find_package (SeqAn REQUIRED)
 
+# Load the SeqAn module and fail if not found.
+find_package(Boost COMPONENTS program_options REQUIRED)
+
 # ----------------------------------------------------------------------------
 # Build Setup
 # ----------------------------------------------------------------------------
@@ -24,9 +27,13 @@ include_directories (${SEQAN_INCLUDE_DIRS})
 # Add definitions set by find_package (SeqAn).
 add_definitions (${SEQAN_DEFINITIONS})
 
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+endif()
+
 # Add CXX flags found by find_package (SeqAn).
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS}")
 
 # Add executable and link against SeqAn dependencies.
-add_executable (biotool-cpp biotool.cpp)
-target_link_libraries (biotool-cpp ${SEQAN_LIBRARIES})
+add_executable (biotool-cpp biotool.cpp options.cpp)
+target_link_libraries (biotool-cpp ${SEQAN_LIBRARIES} ${Boost_LIBRARIES})
