--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ before_install:
   - ./.travis/install-dependencies/cpp-install-dependencies.sh
   - ./.travis/install-dependencies/haskell-install-dependencies.sh
   - ./.travis/install-dependencies/java-install-dependencies.sh
-#  - ./.travis/install-dependencies/js-install-dependencies.sh
+  - ./.travis/install-dependencies/js-install-dependencies.sh
   - ./.travis/install-dependencies/python-install-dependencies.sh
-#  - ./.travis/install-dependencies/ruby-install-dependencies.sh
+  - ./.travis/install-dependencies/ruby-install-dependencies.sh
   - ./.travis/install-dependencies/rust-install-dependencies.sh
 
 script:
