--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
 
 script:
   - ./.travis/test-all.sh
+  - ./.travis/test-c.sh
   - ./.travis/test-java.sh
   - ./.travis/test-python.sh
   - ./.travis/test-haskell.sh
