--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,16 @@ before_install:
   - ./.travis/install-dependencies/perl5-install-dependencies.sh
 
 script:
-  - ./.travis/test-all.sh
+  - ./.travis/test.sh c/biotool-c
+  - ./.travis/test.sh js/biotool.js
+  - ./.travis/test.sh ~/.local/bin/biotool-hs
+  - ./.travis/test.sh ruby/biotool.rb
+  - ./.travis/test.sh biotool-py
+  - ./.travis/test.sh java/biotool-java
+  - ./.travis/test.sh ~/.cargo/bin/biotool-rs
+  - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
+  - ./.travis/test.sh r/biotool.R
+  - ./.travis/test.sh perl5/biotool.pl
   - ./.travis/test-c.sh
   - ./.travis/test-java.sh
   - ./.travis/test-python.sh
