--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ addons:
       npm
 
 before_install:
-  - ./.travis/install-dependencies/c-install-dependencies.sh
-  - ./.travis/install-dependencies/cpp-install-dependencies.sh
-  - ./.travis/install-dependencies/haskell-install-dependencies.sh
-  - ./.travis/install-dependencies/java-install-dependencies.sh
-  - ./.travis/install-dependencies/js-install-dependencies.sh
-  - ./.travis/install-dependencies/python-install-dependencies.sh
+#  - ./.travis/install-dependencies/c-install-dependencies.sh
+#  - ./.travis/install-dependencies/cpp-install-dependencies.sh
+#  - ./.travis/install-dependencies/haskell-install-dependencies.sh
+#  - ./.travis/install-dependencies/java-install-dependencies.sh
+#  - ./.travis/install-dependencies/js-install-dependencies.sh
+#  - ./.travis/install-dependencies/python-install-dependencies.sh
   - ./.travis/install-dependencies/r-install-dependencies.sh
-  - ./.travis/install-dependencies/ruby-install-dependencies.sh
-  - ./.travis/install-dependencies/rust-install-dependencies.sh
-  - ./.travis/install-dependencies/perl5-install-dependencies.sh
+#  - ./.travis/install-dependencies/ruby-install-dependencies.sh
+#  - ./.travis/install-dependencies/rust-install-dependencies.sh
+#  - ./.travis/install-dependencies/perl5-install-dependencies.sh
 
 script:
   - ./.travis/test.sh c/biotool-c
