Comment out all travis tests except C++

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ addons:
       npm
 
 before_install:
-  - ./c/.travis/install-dependencies.sh 
-#  - ./cpp/.travis/install-dependencies.sh 
+#  - ./c/.travis/install-dependencies.sh 
+ - ./cpp/.travis/install-dependencies.sh 
 #  - ./haskell/.travis/install-dependencies.sh  
 #  - ./java/.travis/install-dependencies.sh  
 #  - ./js/.travis/install-dependencies.sh 
@@ -22,14 +22,14 @@ before_install:
 #  - ./perl5/.travis/install-dependencies.sh
 
 script:
-  - ./.travis/test.sh c/biotool-c
-#  - ./.travis/test.sh js/biotool.js
+#  - ./.travis/test.sh c/biotool-c
+ - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
+# - ./.travis/test.sh js/biotool.js
 #  - ./.travis/test.sh ~/.local/bin/biotool-hs
 #  - ./.travis/test.sh ruby/biotool.rb
 #  - ./.travis/test.sh biotool-py
 #  - ./.travis/test.sh java/biotool-java
 #  - ./.travis/test.sh ~/.cargo/bin/biotool-rs
-#  - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
 #  - ./.travis/test.sh r/biotool.R
 #  - ./.travis/test.sh perl5/biotool.pl
 #  - ./c/.travis/unit-test.sh
