Comment out everything except Haskell for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ addons:
 
 before_install:
 #  - ./c/.travis/install-dependencies.sh 
- - ./cpp/.travis/install-dependencies.sh 
-#  - ./haskell/.travis/install-dependencies.sh  
+# - ./cpp/.travis/install-dependencies.sh 
+ - ./haskell/.travis/install-dependencies.sh  
 #  - ./java/.travis/install-dependencies.sh  
 #  - ./js/.travis/install-dependencies.sh 
 #  - ./python/.travis/install-dependencies.sh  
@@ -23,9 +23,9 @@ before_install:
 
 script:
 #  - ./.travis/test.sh c/biotool-c
- - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
+# - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
+ - ./.travis/test.sh ~/.local/bin/biotool-hs
 # - ./.travis/test.sh js/biotool.js
-#  - ./.travis/test.sh ~/.local/bin/biotool-hs
 #  - ./.travis/test.sh ruby/biotool.rb
 #  - ./.travis/test.sh biotool-py
 #  - ./.travis/test.sh java/biotool-java
