--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ addons:
       npm
 
 before_install:
-#  - ./c/.travis/install-dependencies.sh 
+#  - ./c/.travis/install-dependencies.sh   # breaks travis, empty FASTA file
 # - ./cpp/.travis/install-dependencies.sh 
 # - ./haskell/.travis/install-dependencies.sh  
- - ./java/.travis/install-dependencies.sh  
-#  - ./js/.travis/install-dependencies.sh 
+# - ./java/.travis/install-dependencies.sh  # breaks travis, empty FASTA file
+ - ./js/.travis/install-dependencies.sh 
 #  - ./python/.travis/install-dependencies.sh  
 #  - ./r/.travis/install-dependencies.sh 
 #  - ./ruby/.travis/install-dependencies.sh 
@@ -25,8 +25,8 @@ script:
 #  - ./.travis/test.sh c/biotool-c
 # - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
 # - ./.travis/test.sh ~/.local/bin/biotool-hs
- - ./.travis/test.sh java/biotool-java
-# - ./.travis/test.sh js/biotool.js
+# - ./.travis/test.sh java/biotool-java
+ - ./.travis/test.sh js/biotool.js
 #  - ./.travis/test.sh ruby/biotool.rb
 #  - ./.travis/test.sh biotool-py
 #  - ./.travis/test.sh ~/.cargo/bin/biotool-rs
