--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_install:
 # - ./haskell/.travis/install-dependencies.sh  
 # - ./java/.travis/install-dependencies.sh  # breaks travis, empty FASTA file
 # - ./js/.travis/install-dependencies.sh # breaks travis, empty FASTA file
- - ./python/.travis/install-dependencies.sh  
-#  - ./r/.travis/install-dependencies.sh 
+#  - ./python/.travis/install-dependencies.sh  
+ - ./r/.travis/install-dependencies.sh 
 #  - ./ruby/.travis/install-dependencies.sh 
 #  - ./rust/.travis/install-dependencies.sh 
 #  - ./perl5/.travis/install-dependencies.sh
@@ -27,12 +27,12 @@ script:
 # - ./.travis/test.sh ~/.local/bin/biotool-hs
 # - ./.travis/test.sh java/biotool-java
 # - ./.travis/test.sh js/biotool.js
- - ./.travis/test.sh biotool-py
+#  - ./.travis/test.sh biotool-py
+ - ./.travis/test.sh r/biotool.R
 #  - ./.travis/test.sh ruby/biotool.rb
 #  - ./.travis/test.sh ~/.cargo/bin/biotool-rs
-#  - ./.travis/test.sh r/biotool.R
 #  - ./.travis/test.sh perl5/biotool.pl
 #  - ./c/.travis/unit-test.sh
 #  - ./haskell/.travis/unit-test.sh
 #  - ./java/.travis/unit-test.sh
- - ./python/.travis/unit-test.sh
+# - ./python/.travis/unit-test.sh
