--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_install:
 # - ./java/.travis/install-dependencies.sh  # breaks travis, empty FASTA file
 # - ./js/.travis/install-dependencies.sh # breaks travis, empty FASTA file
 #  - ./python/.travis/install-dependencies.sh  
- - ./r/.travis/install-dependencies.sh 
-#  - ./ruby/.travis/install-dependencies.sh 
+# - ./r/.travis/install-dependencies.sh 
+ - ./ruby/.travis/install-dependencies.sh 
 #  - ./rust/.travis/install-dependencies.sh 
 #  - ./perl5/.travis/install-dependencies.sh
 
@@ -28,8 +28,8 @@ script:
 # - ./.travis/test.sh java/biotool-java
 # - ./.travis/test.sh js/biotool.js
 #  - ./.travis/test.sh biotool-py
- - ./.travis/test.sh r/biotool.R
-#  - ./.travis/test.sh ruby/biotool.rb
+# - ./.travis/test.sh r/biotool.R
+ - ./.travis/test.sh ruby/biotool.rb
 #  - ./.travis/test.sh ~/.cargo/bin/biotool-rs
 #  - ./.travis/test.sh perl5/biotool.pl
 #  - ./c/.travis/unit-test.sh
