--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
 before_install:
  - ./c/.travis/install-dependencies.sh
  - ./cpp/.travis/install-dependencies.sh 
+ - ./clojure/.travis/install-dependencies.sh
  - ./haskell/.travis/install-dependencies.sh  
  - ./java/.travis/install-dependencies.sh
  - ./js/.travis/install-dependencies.sh
