--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
  - ./.travis/test.sh clojure/bin/biotool-clj
  - ./.travis/test.sh ~/.local/bin/biotool-hs
 # - ./.travis/test.sh java/biotool-java
-# - ./.travis/test.sh js/biotool.js
+ - ./.travis/test.sh js/biotool.js
  - ./.travis/test.sh biotool-py
  - ./.travis/test.sh r/biotool.R
  - ./.travis/test.sh ruby/bin/biotool
