--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
 # - ./.travis/test.sh clojure/bin/biotool-clj
 # - ./.travis/test.sh ~/.local/bin/biotool-hs
 # - ./.travis/test.sh java/biotool-java
+ - node -v
  - ./.travis/test.sh js/biotool.js
 # - ./.travis/test.sh biotool-py
 # - ./.travis/test.sh r/biotool.R
