--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
 # - ./.travis/test.sh clojure/bin/biotool-clj
 # - ./.travis/test.sh ~/.local/bin/biotool-hs
 # - ./.travis/test.sh java/biotool-java
+ - which node
  - node -v
  - ./.travis/test.sh js/biotool.js
 # - ./.travis/test.sh biotool-py
