--- a/rust/.travis.yml
+++ b/rust/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - ./.travis/install-dependencies.sh 
 
 script:
-  - ./.travis/test.sh ~/.cargo/bin/biotool-rs
+  - ./.travis/test.sh ~/.cargo/bin/bionitio-rs
   - ./.travis/unit-test.sh
