--- a/.travis.yml
+++ b/.travis.yml
@@ -23,17 +23,17 @@ before_install:
 
 # commented out tests break travis, fail on empty FASTA file
 script:
- - ./.travis/test.sh c/biotool-c
- - ./.travis/test.sh cpp/src/biotool-build/biotool-cpp
- - ./.travis/test.sh clojure/bin/biotool-clj
- - ./.travis/test.sh ~/.local/bin/biotool-hs
- - ./.travis/test.sh java/biotool-java
- - ./.travis/test.sh js/biotool.js
- - ./.travis/test.sh biotool-py
- - ./.travis/test.sh r/biotool.R
- - ./.travis/test.sh ruby/bin/biotool
- - ./.travis/test.sh ~/.cargo/bin/biotool-rs
- - ./.travis/test.sh perl5/biotool.pl
+ - ./.travis/test.sh c/bionitio-c
+ - ./.travis/test.sh cpp/src/bionitio-build/bionitio-cpp
+ - ./.travis/test.sh clojure/bin/bionitio-clj
+ - ./.travis/test.sh ~/.local/bin/bionitio-hs
+ - ./.travis/test.sh java/bionitio-java
+ - ./.travis/test.sh js/bionitio.js
+ - ./.travis/test.sh bionitio-py
+ - ./.travis/test.sh r/bionitio.R
+ - ./.travis/test.sh ruby/bin/bionitio
+ - ./.travis/test.sh ~/.cargo/bin/bionitio-rs
+ - ./.travis/test.sh perl5/bionitio.pl
  - ./c/.travis/unit-test.sh
  - ./haskell/.travis/unit-test.sh
  - ./java/.travis/unit-test.sh
