--- a/csharp/csharp.csproj
+++ b/csharp/csharp.csproj
@@ -6,5 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.CommandlineUtils" Version="1.1.1" />
     <PackageReference Include="NetBio.Core" Version="3.0.0-alpha" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
   </ItemGroup>
 </Project>
