--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
  - ./ruby/.travis/install-dependencies.sh 
  - ./rust/.travis/install-dependencies.sh 
  - ./perl5/.travis/install-dependencies.sh
+ - ./csharp/.travis/install-dependencies.sh
 
 # commented out tests break travis, fail on empty FASTA file
 script:
@@ -34,6 +35,7 @@ script:
  - ./.travis/test.sh ruby/bin/bionitio
  - ./.travis/test.sh ~/.cargo/bin/bionitio-rs
  - ./.travis/test.sh perl5/bionitio.pl
+ - ./.travis/test.sh csharp/bionitio/bin/Debug/netcoreapp2.0/linux-x64/publish/bionitio
  - ./c/.travis/unit-test.sh
  - ./haskell/.travis/unit-test.sh
  - ./java/.travis/unit-test.sh
@@ -41,3 +43,4 @@ script:
 # XXX This is failing with a panic, the single > test.
 # - ./rust/.travis/unit-test.sh
  - ./ruby/.travis/unit-test.sh
+ - ./csharp/.travis/unit-test.sh
