Remove github account name and add log file output

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
   # Get command line help
   - boot/bionitio-boot.sh -h 
   # Create a new repository using Python
-  - boot/bionitio-boot.sh -i python -n skynet -c BSD-3-Clause -g cyberdyne -a 'Miles Bennett Dyson' -e 'miles@cyberdyne.com'
+  - boot/bionitio-boot.sh -i python -n skynet -c BSD-3-Clause -a 'Miles Bennett Dyson' -e 'miles@cyberdyne.com' -l logfile
