Run Docker container with -h

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_install:
 
 script:
   # Get command line help
-  - boot/bionitio-boot.sh -h 
-  - boot/bionitio-boot-test.sh boot/bionitio-boot.sh
+  # - boot/bionitio-boot.sh -h 
+  # - boot/bionitio-boot-test.sh boot/bionitio-boot.sh
+  - docker run --rm bionitio-boot -h
