--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
   # - boot/bionitio-boot.sh -h 
   # - boot/bionitio-boot-test.sh boot/bionitio-boot.sh
   - docker run --rm bionitio-boot -h
-  - docker -v `pwd`:/app run --rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
+  - docker run -v `pwd`:/out--rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
