--- a/boot/Dockerfile
+++ b/boot/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.7.3-stretch
 WORKDIR /out
 COPY bionitio-boot.sh .
 
-ENTRYPOINT ["/bionitio-boot.sh"]
+ENTRYPOINT ["./bionitio-boot.sh"]
