--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_install:
 script:
   # Get command line help
   # - boot/bionitio-boot.sh -h 
-  # - boot/bionitio-boot-test.sh boot/bionitio-boot.sh
   - docker run --rm bionitio-boot -h
   - docker run -v `pwd`:/out--rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
+  - boot/bionitio-boot-test.sh
