--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   # Get command line help
   # - boot/bionitio-boot.sh -h 
   - docker run --rm bionitio-boot -h
-  - docker run -v `pwd`:/out --rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
+    # - docker run -v `pwd`:/out --rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
+  - docker run --rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
   - ls -latrh
-  - boot/bionitio-boot-test.sh
+    # - boot/bionitio-boot-test.sh
