--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 
 script:
   - docker run --rm bionitio-boot -h
-  - docker run -e GIT_AUTHOR_NAME="user" -e GIT_AUTHOR_EMAIL="author@foo.com" -e GIT_COMMITTER_NAME="user" -e GIT_COMMITTER_EMAIL="author@foo.com" -it -v "$TRAVIS_BUILD_DIR:/out" --rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
+  - docker run -it -v "$TRAVIS_BUILD_DIR:/out" --rm bionitio-boot -i python -n biodemo -c BSD-3-Clause -a 'Example Author Name' -e 'example@email.address.com' -l logfile -v
   - boot/bionitio-boot-test.sh
